--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <link rel="shortcut icon" href="favicon.png" type="imagem/png">
 
-    <title>Money</title>
+    <title>Gerenciador de gastos</title>
 
    
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
